--- a/app/stylus/stylesheet.styl
+++ b/app/stylus/stylesheet.styl
@@ -373,28 +373,33 @@ html
           .form
             padding-right 2vw
             .col-md-9
+              #col-consulta
+                .alerta-consulta
+                  margin-top 30px
+                  border-radius 30px
               #consulta-a
                 font-family 'Varela Round'
                 margin-top 15px
                 margin-bottom 9px
                 display block
-              .caret
-                position relative
-                left 2px
               input, button, textarea
                 margin 10px 0px 0px
                 border-radius 30px
                 background-color $hog-lgray
                 color darken($hog-lgray, 50%)
                 width 100%
+                border 1px solid darken($hog-lgray, 10%)
                 &:focus
                   box-shadow: 0px 1px 10px -3px $hog-yellow
                   border: $hog-yellow 1px solid
+                span
+                  position relative
+                  left 10px
               #input-direccion
                 margin-bottom 0px
               #input-consulta
                 height 253px
-                font-size 20px
+                font-size 18px
                 line-height 30px
               .btn-group
                 width 100%
@@ -407,6 +412,7 @@ html
           .submit-form
             padding 0 1vw
             #submit-button
+              border darken($hog-red, 20%) 1px solid
               width 100%
               margin-top 30px
               font-family 'Varela Round'
