--- a/app/stylus/stylesheet.styl
+++ b/app/stylus/stylesheet.styl
@@ -399,8 +399,9 @@ html
                 margin-bottom 0px
               #input-consulta
                 height 253px
-                font-size 18px
+                font-size 15px
                 line-height 30px
+                padding 20px
               .btn-group
                 width 100%
                 padding 0
