Cosas para arreglar
Navbar, contenido de los tiles, botón de facebook, links

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -104,14 +104,13 @@ html(lang="en")
                       .menu-circle#c-raviolini
               //- FAMILIAR
               .row.detalles-row
-                .col-md-5.col-md-offset-2.col-sm-12.col-xs-12.col-xs-offset-0
-                  img#familiar-pic(src='src/images/160701_Hog_Pastahogar_-FAMILIAR_vistafrente.png', style="width: 100%")
+                .col-md-5.col-md-offset-2.col-sm-5.col-sm-offset-2.col-xs-12.col-xs-offset-0
+                  img#familiar-pic(src='src/images/160701_Hog_Pastahogar_-FAMILIAR_vistafrente.png')
                   .thumb#thumb-1
                   .thumb#thumb-2
                   .thumb#thumb-3
-                .col-md-5.col-sm-12.col-xs-12#col-detalles
+                .col-md-5.col-sm-5.col-xs-12#col-detalles
                   h2.module-title PASTAHOGAR FAMILIAR
-
                   .module-subtitle-container
                     h3.module-subtitle#pastaHogarFamiliar FABRICADORA DE PASTAS
                   p.
@@ -167,8 +166,8 @@ html(lang="en")
                   .gourmetDivider
               //- GOURMET
               .row.detalles-row
-                .col-md-5.col-md-offset-2.col-sm-5.col-sm-offset-2
-                  img#familiar-pic(src='src/images/160701_Hog_Pastahogar_-GOURMET_dorada.png', style="width: 100%")
+                .col-md-5.col-md-offset-2.col-sm-5.col-sm-offset-2.col-xs-12
+                  img#familiar-pic(src='src/images/160701_Hog_Pastahogar_-GOURMET_dorada.png')
                   .thumb#thumb-1
                   .thumb#thumb-2
                   .thumb#thumb-3
