--- a/app/stylus/stylesheet.styl
+++ b/app/stylus/stylesheet.styl
@@ -1,6 +1,16 @@
 @import '_reset.styl'
 @import '_variables.styl'
 
+// IMPORTED FONTS
+
+@font-face
+  font-family GothamR
+  font-style normal
+  src url(src/fonts/GothamRounded-Book.otf)
+@font-face
+  font-family GothamRL
+  font-style normal
+  src url(src/fonts/GothamRounded-Light.otf)
 // *
 //   outline solid cyan 1px
 
@@ -30,8 +40,39 @@ html
                 @media screen and (max-width: 480px) {
                   width 60vw
                   height auto
-                  margin 2vw 18vw
+                  margin-left 10px
+                  margin-top 4vw
                 }
+            #top-flogo
+              a
+                img
+                  width 40px
+                  margin-top 2vw
+                  margin-right 2vw
+                  float right
+                  @media screen and (max-width: 480px) {
+                    margin-top 6vw
+                    margin-right -20px
+                    width 40px
+                  }
+                  &:hover
+                    opacity 0.5
+            #resp-menu
+                display none
+                margin-top 3vw
+                font-size 28px
+                color $hog-red
+                cursor pointer
+                &:hover
+                  opacity 0.8
+                @media screen and (max-width: 480px) {
+                  display block
+                }
+                @media screen and (max-width: 480px) {
+                  margin-top: 8vw
+                }
+            .active
+              display block !important
             #nav-bar
               padding: 0
               position: relative;
@@ -47,6 +88,9 @@ html
                 ul
                   height: 10vh
                   width: 100%
+                  @media screen and (max-width: 480px) {
+                    height auto
+                  }
                   li
                     display: inline-block;
                     width: 25%
@@ -54,6 +98,14 @@ html
                     transition: background-color 0.2s ease-in-out
                     &:hover
                       background-color: darken($hog-lgray, 30%)
+                    @media screen and (max-width: 480px) {
+                      width 100%
+                    }
+                    a
+                      @media screen and (max-width: 480px) {
+                        font-size 2em
+                        line-height 1em
+                      }
                   .menu-item-header
                     position: relative;
                   .menu-item-header:hover .dropdown-menu
@@ -67,26 +119,39 @@ html
                       width: 100%
                       height: 6vw * 4
                       padding: 0
-                      z-index: 1000
+                      z-index: 5000
                       border: none
+                      @media screen and (max-width: 480px) {
+                        width 100%
+                        height auto
+                      }
+                    
                       .dropdown-item
                         width: 100%
                         display: inline-block;
-                        width: 100%
                         height: 6vw
                         line-height: 6vw
                         text-align: center;
                         transition: 0.2s ease-in-out all
                         &:hover
                           background-color: darken($hog-lgray, 70%)
+                        @media screen and (max-width: 480px) {
+                          height auto
+                          margin-bottom 30px
+                        }
                         a
                           text-decoration: none
+                          @media screen and (max-width: 480px) {
+                            line-height 1.3em
+                            margin 15px 0px
+                            font-size 2em
+                          }
                     .menu-item-header:hover .dropdown-menu
                         display: block
                       a
-                        font-size: 1.8vw
+                        font-size: 1.4vw
                         color white
-                        font-family: 'Varela Round'
+                        font-family: GothamR
                         letter-spacing: 2px
                         height: 8vh
                         text-align: center;
@@ -117,12 +182,14 @@ html
                   position: absolute
                   color: $hog-red
                   text-align: center
-                  font-family: 'Varela Round'
+                  font-family: GothamR
                   font-size: 2vw
                   margin: 40% 12%
                   @media screen and (max-width: 480px) {
                     font-size 5vw
                   }
+                .bold
+                  font-family GothamRL
 
               #r1t1, #r2t1, #r3t1
                 width: 25%
@@ -162,6 +229,10 @@ html
                   transform: scale(1.02) translateX(-3px);
               #r1t1
                 background-color: $hog-gray
+                span
+                  color white
+                  border-top 2px white solid
+                  border-bottom 2px white solid
               #r1t2
                 background-image: url('src/images/tile_2.png')
                 background-size: cover
@@ -170,16 +241,27 @@ html
               #r1t4
                 background-image: url('src/images/tile_3.png')
                 background-size: cover
+                span
+                  color white
+
               #r2t1
                 background-image: url('src/images/tile_1.png')
                 background-size: cover
               #r2t2
                 background-color: $hog-orange
+                span
+                  color white
+                  border-top 2px white solid
+                  border-bottom 2px white solid
               #r2t3
                 background-image: url('src/images/tile_4.png')
                 background-size: cover
               #r2t4
                 background-color: $hog-yellow
+                span
+                  color white
+                  border-top 2px white solid
+                  border-bottom 2px white solid
               #r3t1
                 background-color: $hog-llgray
               #r3t2
@@ -187,37 +269,47 @@ html
                 background-size: cover
               #r3t3
                 background-color: $hog-olive
+                span
+                  color white
+                  border-top 2px white solid
+                  border-bottom 2px white solid
               #r3t4
                 background-color: $hog-red
+                padding-bottom 0px
+                img
+                  width 40%
+                  margin 30%
           #separator
             background-color: white
-            height: 200px
+            height: 100px
           #historia
             text-align: center
             margin-bottom: 30px
           p
-            font-family: 'Varela Round'
+            margin-left 10px
+            font-family: GothamR
             padding-right: 5vw
-            text-align: justify
+            text-align: left
           #historia #title
-            font-family: 'Varela Round'
+            font-family: GothamR
             font-size: 2em
             text-align: center
           #row-productos
             text-align: center;
-            margin-top: 200px
+            margin-top: 150px
             #productos
               div, #title
-                font-family: 'Varela Round'
+                font-family: GothamR
               #title
                 font-size: 2em
                 margin-bottom: 30px
             #product-header
+              margin-top 20px
               padding-right: 5vw
             .menu-item
               display: inline-block;
               width: 25%
-              font-family: 'Varela Round'
+              font-family: GothamR
               font-size: 1.2em
               transition: transform  0.2s ease-in-out
               cursor: pointer;
@@ -237,6 +329,9 @@ html
               left: 6vw
               @media screen and (max-width: 480px) {
                 left 8vw
+              }
+              @media screen and (max-width: 768px) {
+                left 10vw
               }
               .menu-circle
                 width: 15px
@@ -295,14 +390,14 @@ html
             #col-detalles
               padding-right: 5vw
               h2
-                font-family: 'Varela Round'
+                font-family: GothamR
                 border-bottom 0px
                 font-size 30px
                 color darken($hog-lgray, 70%)
               .module-subtitule-container
                 width: 100%
               h3
-                font-family: 'Varela Round'
+                font-family: GothamR
                 color: $hog-yellow
                 border-top: 3px solid $hog-yellow
                 border-bottom: 3px solid $hog-yellow
@@ -318,14 +413,14 @@ html
                 color: $hog-olive
               p
                 width: 100%
-                font-family: 'Varela Round'
+                font-family: GothamR
                 margin: 0
                 padding: 0
                 color: darken($hog-lgray, 30%)
           .caracteristicas-row
             padding-right 3vw
             h2
-              font-family: 'Varela Round'
+              font-family: GothamR
               color darken($hog-lgray, 50%)
               border-bottom 2px darken($hog-lgray, 50%) solid
               font-size 20px
@@ -333,13 +428,13 @@ html
             ul
               margin-bottom 0px
               li
-                font-family: 'Varela Round'
+                font-family: GothamR
                 color: darken($hog-lgray, 30%)
           .cualidadesAdicionales-row
             border-bottom none
             padding-right 3vw
             h2
-              font-family 'Varela Round'
+              font-family GothamR
               color darken($hog-lgray, 50%)
               border-bottom 2px darken($hog-lgray, 50%) solid
               font-size 20px
@@ -347,7 +442,7 @@ html
             ul
               margin-bottom 0px
               li
-                font-family: 'Varela Round'
+                font-family: GothamR
                 color: darken($hog-lgray, 30%)
                 font-size 15px
           .row
@@ -376,7 +471,7 @@ html
             span
               display block
               margin-top 20px
-              font-family 'Varela Round'
+              font-family GothamR
               font-size 18px
           .contact-separator
             padding-right 3vw
@@ -393,7 +488,7 @@ html
                   margin-top 30px
                   border-radius 30px
               #consulta-a
-                font-family 'Varela Round'
+                font-family GothamR
                 margin-top 15px
                 margin-bottom 9px
                 display block
@@ -404,7 +499,7 @@ html
                 color darken($hog-lgray, 50%)
                 width 100%
                 border 1px solid darken($hog-lgray, 10%)
-                font-family 'Varela Round'
+                font-family GothamR
                 &:focus
                   box-shadow: 0px 1px 10px -3px $hog-yellow
                   border: $hog-yellow 1px solid
@@ -413,32 +508,39 @@ html
                   left 10px
               #input-direccion
                 margin-bottom 0px
+                font-family GothamR
               #input-consulta
                 height 253px
                 font-size 15px
                 line-height 30px
                 padding 20px
+                font-family GothamR
               .btn-group
                 width 100%
                 padding 0
                 border-radius 30px
+                font-family GothamR
                 #dropdown-pais
                   background-color $hog-lgray
                   top 50px
                   width 100%
+                  font-family GothamR
           .submit-form
             padding 0 1vw
             #submit-button
               border darken($hog-red, 20%) 1px solid
               width 100%
               margin-top 30px
-              font-family 'Varela Round'
+              font-family GothamR
               text-align center
               border-radius 0px
               background-color $hog-red
-              color lighten($hog-red, 80%)
+              color lighten($hog-red, 90%)
           .serviciotecnico-row
-            margin-top 70px
+            margin-top 50px
+            #serv-tec
+              #title
+                font-family GothamR
             #paragraph-col
               margin-top 30px
               @media screen and (min-width: 768px) {
@@ -449,8 +551,8 @@ html
               #title
                 font-size 2em
             p
-              font-size 17px
-              line-height 20px
+              font-size 15px
+              line-height 18px
               color darken($hog-lgray, 30%)
           .contact-separator
             #footer-separator
@@ -462,11 +564,12 @@ html
         transition transform 0.2s linear
         &:hover
           transform translateY(-20px)
-        @media screen and (min-width: 768px) {
-          width 50%
+        @media screen and (max-width: 768px) {
+          width 30%
         }
       h1
         font-size 23px
+        font-family GothamR
       a
         text-decoration none
         color darken($hog-lgray, 30%)
@@ -474,9 +577,26 @@ html
         display block
         &:hover
           color darken($hog-lgray, 80%)
+      img
+        width 30px
+        margin-top 10px
+        &:hover
+          opacity 0.8
       #firma
         color darken($hog-lgray, 30%)
-        font-size 1em
+        font-size 0.8em
         margin-top 30px
         margin-left 10px
         margin-bottom 20px
+
+
+
+        // CHANGED Parrafos de detalles alineado a la izquierda
+        // CHANGED Sacar RRHH de lista de contacto
+        // CHANGED Arreglar fuentes
+        // CHANGED Poner menú en la parte superior
+        // CHANGED Poner íconos del facebook
+        // TODO Armar menú para responsive
+        // TODO agregar animaciones de scroll
+        // TODO Implementar formulario
+        // TODO Ajustar marjen izquierdo
