--- a/app/stylus/stylesheet.styl
+++ b/app/stylus/stylesheet.styl
@@ -96,6 +96,7 @@ html
                     display: inline-block;
                     width: 25%
                     transition: background-color 0.2s ease-in-out
+                    vertical-align top
                     &:hover
                       background-color: darken($hog-lgray, 30%)
                     @media screen and (max-width: 480px) {
