Agregar links restantes

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -34,7 +34,7 @@ html(lang="en")
               .col-md-0.col-sm-0.col-xs-2#resp-menu
                 span.glyphicon.glyphicon-menu-hamburger
             .row
-              .col-md-12#nav-bar
+              .col-md-12#nav-bar(style="cursor: pointer")
                 nav.navbar.navbar-default
                   ul.nav.navbar-nav
                     li.menu-item-header
@@ -53,7 +53,7 @@ html(lang="en")
           main#main
             .container-fluid
               //- DAMERO
-              .row#tile-row
+              .row#tile-row(style="cursor: pointer")
                 .col-md-12.col-xs-12#tile-box
                   a.toGourmet
                     .tile.lt#r1t1
